cluster/charts/archive/ingress-nginx/test-ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo-cd
  annotations: {}
    # cert-manager.io/cluster-issuer: letsencrypt-production
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: monitor-nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-cd-argocd-server
              port:
                number: 80
